--- a/e-assistant/src/app/home-page/home.component.css
+++ b/e-assistant/src/app/home-page/home.component.css
@@ -20,14 +20,14 @@
 }
 .textSearch {
   border: none;
-  width: 20em;
-  font-size: 1.6em;
+  width: 82%;
+  font-size: 1.3em;
   line-height: 2.5;
   padding-left: 1em;
 }
 .buttonSearch {
-  height: 4.5em;
-  width: 4.1em;
+  height: 4em;
+  width: 12%;
   padding: 12px;
   border: none;
   background-color: lightblue;
@@ -37,6 +37,13 @@
   background-color: white;
   margin-right: 3em;
   margin-bottom: 3em;
+  padding: 1em;
+}
+.result1 {
+  cursor: pointer;
+}
+.result2 {
+  cursor: pointer;
 }
 .right {
   background-color: white;
@@ -52,7 +59,6 @@
   padding-left: 0.5em;
 }
 .docResults {
-  background-color: lightcoral;
   height: 30em;
   margin-left: 3em;
   margin-right: 3em;
@@ -61,18 +67,6 @@
 .sign {
   height: 5em;
 }
-.signButton {
-  display: flex;
-  justify-content: center;
-  padding-top: 1em;
-  padding-left: 7em;
-  padding-right: 7em;
-  padding-bottom: 1em;
-  letter-spacing: 0.3em;
-  color: white;
-  border: none;
-  background-color: lightblue;
-  border-radius: 5px;
-  margin-left: 5em;
-  margin-bottom: 2em;
-}
+/* li {
+  list-style: none;
+} */
