--- a/e-assistant/src/app/home-page/home.component.html
+++ b/e-assistant/src/app/home-page/home.component.html
@@ -7,21 +7,124 @@
           class="textSearch"
           placeholder="Escriu alguna cosa"
         />
-        <button type="button" class="buttonSearch">
+        <button class="btn btn-primary" type="button" style="width: 5em">
           <img
             class="imgageSearch"
-            src="../../assets/images/search-svgrepo-com.svg"
+            src="../../assets/images/icons8-búsqueda.svg"
+            style="width: 2em; height: 2em"
           />
         </button>
       </div>
-      <div class="results"></div>
+      <div class="results">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Petició</th>
+              <th scope="col">Estat</th>
+              <th scope="col">Data de signatura</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr></tr>
+            <tr class="result1">
+              <th scope="row">45341</th>
+              <td>Pressupost per la reforma</td>
+              <td>
+                <img
+                  src="../../assets/images/icons8-checked-checkbox-50.png"
+                  style="width: 2em; height: 2em"
+                />
+              </td>
+              <td>29/09/2021</td>
+            </tr>
+            <tr class="result2">
+              <th scope="row">54972</th>
+              <td>Petició d'hipoteca</td>
+              <td>
+                <img
+                  src="../../assets/images/icons8-close-window-50.png"
+                  style="width: 2em; height: 2em"
+                />
+              </td>
+              <td>12/06/2021</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <div class="right">
       <h1 class="headerResults">Resum i documents a signar</h1>
-      <div class="docResults"></div>
+      <div class="docResults">
+        <div class="result1Doc">
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button
+                class="nav-link active"
+                id="home-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#home"
+                type="button"
+                role="tab"
+                aria-controls="home"
+                aria-selected="true"
+              >
+                Home
+              </button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button
+                class="nav-link"
+                id="profile-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#profile"
+                type="button"
+                role="tab"
+                aria-controls="profile"
+                aria-selected="false"
+              >
+                Profile
+              </button>
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div
+              class="tab-pane fade show active"
+              id="home"
+              role="tabpanel"
+              aria-labelledby="home-tab"
+            >
+              <div style="display: flex; justify-content: flex-start">
+                <ul style="list-style: none; font-size: 1.1em">
+                  <li>
+                    <strong>Concepte</strong>
+                    <span>Pressupost per la reforma #45341</span>
+                  </li>
+                  <li>
+                    <strong>Data</strong>
+                    <span>29/09/2021</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div
+              class="tab-pane fade"
+              id="profile"
+              role="tabpanel"
+              aria-labelledby="profile-tab"
+            >
+              Adeu
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="sign">
-    <button type="button" class="signButton">SIGNA</button>
-  </div>
+  <button
+    type="button"
+    class="btn btn-primary btn-lg"
+    style="margin-left: 5em; margin-bottom: 3em; width: 10em"
+  >
+    SIGNA
+  </button>
 </div>
