--- a/e-assistant/src/app/home-page/pending-other-signatures/pending-other-signatures.component.html
+++ b/e-assistant/src/app/home-page/pending-other-signatures/pending-other-signatures.component.html
@@ -18,9 +18,10 @@
       <div class="col-7 border border-info border-2 rounded">
         <div class="d-flex flex-column bd-highlight my-3">
           <div class="p-2 bd-highlight">
-            <h1 class="headerResults">Resum i documents a signar</h1>
+            <h1 class="headerResults">Resum</h1>
           </div>
           <div class="p-2 bd-highlight">
+            <!-- PDF a visualitzar -->
           </div>
         </div>
       </div>
