--- a/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.css
+++ b/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.css
@@ -75,4 +75,9 @@
     margin-left: 5em;
     margin-bottom: 2em;
   }
-  
+  .nav-item {
+    cursor: pointer;
+  }
+  .clickable-row {
+    cursor: pointer;
+  }
