--- a/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.css
+++ b/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.css
@@ -1,83 +1,94 @@
 .homePage {
-    background-color: lightgray;
-  }
-  .main {
-    display: flex;
-    width: 100%;
-    height: 80%;
-  }
-  .left {
-    padding-left: 3em;
-    padding-top: 4em;
-    background-color: lightgray;
-    margin-right: 2em;
-    margin-left: 2em;
-    width: 40%;
-    height: 80%;
-  }
-  .search {
-    display: flex;
-    padding-bottom: 2em;
-  }
-  .textSearch {
-    border: none;
-    width: 20em;
-    font-size: 1.6em;
-    line-height: 2.5;
-    padding-left: 1em;
-  }
-  .buttonSearch {
-    height: 4.5em;
-    width: 4.1em;
-    padding: 12px;
-    border: none;
-    background-color: lightblue;
-  }
-  .results {
-    height: 30em;
-    background-color: white;
-    margin-right: 3em;
-    margin-bottom: 3em;
-  }
-  .right {
-    background-color: white;
-    margin-top: 4em;
-    margin-bottom: 3em;
-    margin-right: 3em;
-    width: 60%;
-  }
-  .headerResults {
-    font-size: 2em;
-    color: rgb(37, 153, 192);
-  }
-  .docResults {
-    background-color: lightcoral;
-    height: 30em;
-    margin-left: 3em;
-    margin-right: 3em;
-    margin-bottom: 3em;
-  }
-  .sign {
-    height: 5em;
-  }
-  .signButton {
-    display: flex;
-    justify-content: center;
-    padding-top: 1em;
-    padding-left: 7em;
-    padding-right: 7em;
-    padding-bottom: 1em;
-    letter-spacing: 0.3em;
-    color: white;
-    border: none;
-    background-color: lightblue;
-    border-radius: 5px;
-    margin-left: 5em;
-    margin-bottom: 2em;
-  }
-  .nav-item {
-    cursor: pointer;
-  }
-  .clickable-row {
-    cursor: pointer;
-  }
+  background-color: lightgray;
+}
+.main {
+  display: flex;
+  width: 100%;
+  height: 80%;
+}
+.left {
+  padding-left: 3em;
+  padding-top: 4em;
+  background-color: lightgray;
+  margin-right: 2em;
+  margin-left: 2em;
+  width: 40%;
+  height: 80%;
+}
+.search {
+  display: flex;
+  padding-bottom: 2em;
+}
+.textSearch {
+  border: none;
+  width: 20em;
+  font-size: 1.6em;
+  line-height: 2.5;
+  padding-left: 1em;
+}
+.buttonSearch {
+  height: 4.5em;
+  width: 4.1em;
+  padding: 12px;
+  border: none;
+  background-color: lightblue;
+}
+.results {
+  height: 30em;
+  background-color: white;
+  margin-right: 3em;
+  margin-bottom: 3em;
+}
+.right {
+  background-color: white;
+  margin-top: 4em;
+  margin-bottom: 3em;
+  margin-right: 3em;
+  width: 60%;
+}
+.headerResults {
+  font-size: 2em;
+  color: rgb(37, 153, 192);
+}
+.docResults {
+  background-color: lightcoral;
+  height: 30em;
+  margin-left: 3em;
+  margin-right: 3em;
+  margin-bottom: 3em;
+}
+.sign {
+  height: 5em;
+}
+.signButton {
+  display: flex;
+  justify-content: center;
+  padding-top: 1em;
+  padding-left: 7em;
+  padding-right: 7em;
+  padding-bottom: 1em;
+  letter-spacing: 0.3em;
+  color: white;
+  border: none;
+  background-color: lightblue;
+  border-radius: 5px;
+  margin-left: 5em;
+  margin-bottom: 2em;
+}
+.nav-item {
+  cursor: pointer;
+}
+.clickable-row {
+  cursor: pointer;
+}
+.doc1Information {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  list-style: outside none none;
+  border-bottom: 1px solid #ddd;
+  padding-left: 0em;
+  font-size: 1.2em;
+}
+.doc1List {
+  padding-left: 0.5em;
+}
