--- a/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.html
+++ b/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.html
@@ -1,81 +1,123 @@
-
 <div class="container-fulid mx-5 my-5">
-    <div class="row justify-content-between">
-      <div class="col-4 border border-info border-2 rounded" style="height: 750px;">
-        <div class="d-flex flex-column bd-highlight my-3">
-          <div class="p-2 bd-highlight">
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Escriu alguna cosa" aria-label="Search">
-              <button class="btn btn-info" type="submit">
-                <img height="25" src="../../assets/images/search-svgrepo-com.svg" />
-              </button>
-            </form>
-          </div>
-          <div class="p-2 bd-highlight">
-            <h1 class="headerResults">Pendents de la meva signatura</h1>
-            <table class="table table-hover">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Petició</th>
-                  <th scope="col">Estat</th>
-                  <th scope="col">Data de la signatura</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="clickable-row" onclick="displayDoc()">
-                  <th scope="row">1</th>
-                  <td>Conveni Port de Barcelona</td>
-                  <td>
-                    <img src="../../../assets/images/icons8-autograph-50_1.png" height="25">
-                  </td>
-                  <td>02/05/2022</td>
-                </tr>
-                <tr class="clickable-row">
-                  <th scope="row">2</th>
-                  <td>Factura compra maquinària</td>
-                  <td>
-                    <img src="../../../assets/images/icons8-autograph-50_1.png" height="25">
-                  </td>
-                  <td>15/04/2022</td>
-                </tr>
-                <tr class="clickable-row">
-                  <th scope="row">3</th>
-                  <td>Factura llum oficina</td>
-                  <td>
-                    <img src="../../../assets/images/icons8-autograph-50_1.png" height="25">
-                  </td>
-                  <td>23/04/2022</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+  <div class="row justify-content-between">
+    <div
+      class="col-4 border border-info border-2 rounded"
+      style="height: 750px"
+    >
+      <div class="d-flex flex-column bd-highlight my-3">
+        <div class="p-2 bd-highlight">
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Escriu alguna cosa"
+              aria-label="Search"
+            />
+            <button class="btn btn-info" type="submit">
+              <img height="25" src="../../assets/images/icons8-search-50.png" />
+            </button>
+          </form>
+        </div>
+        <div class="p-2 bd-highlight">
+          <h1 class="headerResults">Pendents de la meva signatura</h1>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Petició</th>
+                <th scope="col">Estat</th>
+                <th scope="col">Data límit</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="clickable-row" onclick="displayDoc()">
+                <th scope="row">1</th>
+                <td>Conveni Port de Barcelona</td>
+                <td>
+                  <img
+                    src="../../../assets/images/icons8-autograph-50_1.png"
+                    height="25"
+                  />
+                </td>
+                <td>02/05/2022</td>
+              </tr>
+              <tr class="clickable-row">
+                <th scope="row">2</th>
+                <td>Factura compra maquinària</td>
+                <td>
+                  <img
+                    src="../../../assets/images/icons8-autograph-50_1.png"
+                    height="25"
+                  />
+                </td>
+                <td>15/04/2022</td>
+              </tr>
+              <tr class="clickable-row">
+                <th scope="row">3</th>
+                <td>Factura llum oficina</td>
+                <td>
+                  <img
+                    src="../../../assets/images/icons8-autograph-50_1.png"
+                    height="25"
+                  />
+                </td>
+                <td>23/04/2022</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
-      <div class="col-7 border border-info border-2 rounded">
-        <div class="d-flex flex-column bd-highlight my-3">
-          <div class="p-2 bd-highlight">
-            <h1 class="headerResults">Resum i documents a signar</h1>
+    </div>
+    <div class="col-7 border border-info border-2 rounded">
+      <div class="d-flex flex-column bd-highlight my-3">
+        <div class="p-2 bd-highlight">
+          <h1 class="headerResults">Resum i documents a signar</h1>
+        </div>
+        <div class="p-2 bd-highlight">
+          <div>
+            <ul class="nav nav-tabs" id="doc1" style="display: none">
+              <li class="nav-item">
+                <a
+                  id="tabSummary"
+                  class="nav-link active"
+                  onclick="changeTabSumm()"
+                  aria-current="page"
+                  >Resum</a
+                >
+              </li>
+              <li class="nav-item">
+                <a id="tabDoc" class="nav-link" onclick="changeTabDoc()"
+                  >Document</a
+                >
+              </li>
+            </ul>
           </div>
-          <div class="p-2 bd-highlight">
-            <div>
-              <ul class="nav nav-tabs" id="doc1" style="display: none;">
-                <li class="nav-item">
-                  <a id="tabSummary" class="nav-link active" onclick="changeTabSumm()" aria-current="page">Resum</a>
+          <div>
+            <div id="doc1Summary" style="display: none">
+              <ul class="doc1List">
+                <li class="doc1Information">
+                  <strong>Concepte </strong>
+                  <span>Conveni Port de Barcelona</span>
                 </li>
-                <li class="nav-item">
-                  <a id="tabDoc" class="nav-link" onclick="changeTabDoc()">Document</a>
+                <li class="doc1Information">
+                  <strong>Data </strong>
+                  <span>02/05/2022</span>
                 </li>
               </ul>
             </div>
-          <div>
-          <div id="doc1Summary" style="display: none;">
-            <h1>Sóc un resum</h1>
-          </div>
-          <div id="doc1Doc" style="display: none;">
-            <h1>Sóc un document</h1>
+            <div id="doc1Doc" style="display: none">
+              <h2>Integrate PDF File Viewer in Angular</h2>
+              <pdf-viewer
+                [src]="pdfSrc"
+                [render-text]="true"
+                [original-size]="false"
+                style="width: 800px; height: 600px"
+              ></pdf-viewer>
+              <h1>Sóc un document</h1>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
