feat: button sign

--- a/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.css
+++ b/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.css
@@ -154,3 +154,15 @@
   font-weight: bold;
   margin-left: 0.3em;
 }
+
+.signButtonInfo1 {
+  margin-top: 10em;
+}
+
+.signButtonInfo2 {
+  margin-top: 21.5em;
+}
+
+.signButtonInfo3 {
+  margin-top: 17.5em;
+}
