--- a/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.html
+++ b/e-assistant/src/app/home-page/pending-my-signature/pending-my-signature.component.html
@@ -180,6 +180,15 @@
                   <span style="padding-top: 5px" class="doneSign">Signat</span>
                 </div>
               </div>
+              <div class="signButtonInfo1">
+                <button
+                  type="button"
+                  class="btn btn-primary btn-lg"
+                  (click)="signDocument1()"
+                >
+                  Firmar
+                </button>
+              </div>
             </div>
             <div id="doc2Summary" style="display: none">
               <ul class="docList">
@@ -202,6 +211,15 @@
                   />
                   <span class="pendingSign">Pendent</span>
                 </div>
+              </div>
+              <div class="signButtonInfo2">
+                <button
+                  type="button"
+                  class="btn btn-primary btn-lg"
+                  (click)="signDocument2()"
+                >
+                  Firmar
+                </button>
               </div>
             </div>
             <div id="doc3Summary" style="display: none">
@@ -235,6 +253,15 @@
                   />
                   <span class="pendingSign">Pendent</span>
                 </div>
+              </div>
+              <div class="signButtonInfo3">
+                <button
+                  type="button"
+                  class="btn btn-primary btn-lg"
+                  (click)="signDocument3()"
+                >
+                  Firmar
+                </button>
               </div>
             </div>
             <div id="doc1Doc" style="display: none" class="container">
